# batch-isolation-checker

./: .gitignore  README.md  pyproject.toml  report_analysis.ipynb
batching_security_checker/: __init__.py  backend.py  check_interference.py  modify.py  report_cli.py
batching_security_checker/core/: call_taint_onnx.py  config_class.py  labels.py  model_summary.py  models.py  report.py  taint_handler.py  taint_propagation.py  taint_propagation_test.py  util.py
batching_security_checker/inference/: __init__.py  gemma.py  main.py  util.py
batching_security_checker/leaks/: base.py  graph_builder.py  subgraphs.py
batching_security_checker/models/: github_onnx.py  huggingface_onnx.py
batching_security_checker/onnx_ops/: averagepool.py  batchnormalization.py  cast.py  clip.py  concat.py  constant.py  constantofshape.py  conv.py  convinteger.py  dequantizelinear.py  dynamicquantizelinear.py  elementwise_binary.py  elementwise_unary.py  expand.py  fastgelu.py  flatten.py  gather.py  gelu.py  gemm.py  globalaveragepool.py  groupqueryattention.py  layernormalization.py  matmul.py  matmulinteger.py  maxpool.py  range.py  reducemean.py  reducesum.py  reshape.py  rotaryembedding.py  scatterelements.py  scatternd.py  shape.py  slice.py  softmax.py  (+9 more)
docs/: onnx_spec_operator_overview.txt  requirements_report.txt  requirements_report_huggingface.txt
results/: readme.md
steering_attack/: README.md  main.py  requirements.txt  utils.py
tests/: __init__.py  data_labeler.py  data_modifier.py  onnx_ops_test.py  runner.py  taint_ops_test.py
tools/: generate_elementwise_ops.py
(+39 files in other folders)
